Freecell Solver's News File
===========================
Shlomi Fish <shlomif@cpan.org>
:Date: 2009-09-05
:Revision: $Id$

Version 3.20.1: (01-Jul-2013)
-----------------------------

1. Fix the build and silenced some warnings on MinGW/GCC/Win32.

Version 3.20.0: (26-Jun-2013)
-----------------------------

1. Major speedups to the Simple Simon code - including order of complexity
ones where a lookup is now O(1) instead of O(num_cards). The Simple Simon
code was in general heavily refactored and cleaned up.

2. Some bugs in the Simple Simon alogrithms were fixed, slightly modifying
the outputted solutions.

3. Add missing BuildRequires to the RPM .spec .

4. Add the +qualified-seed-improved+ preset.

5. Fix the run-time display of the iteration count during
+pkill -USR1 fc-solve+.

6. Some minor refactorings and optimisations.

Version 3.18.1: (30-May-2013)
-----------------------------

1. Fix "make install" - there were some problems with the generation of
the man pages.

2. Fix the RPM .spec building.

Version 3.18.0: (30-May-2013)
-----------------------------

1. Add a JavaScript port that uses Emscripten
( https://github.com/kripken/emscripten ) to compile the C code into
JavaScript. See +Makefile.to-javascript.mak+ and the contents of
The +/fc-solve/site/wml+ directory of the repository.

2. Convert the CMake build system to the common +cmake/Shlomif_Common.cmake+
file, which will facilitate cross-project maintenance. It is included inside
the archive.

3. Added a +--help+ flag for the summarize-fc-solve executable.

4. Got the test suite and the +dbm_fc_solver+ and the +depth_dbm_fc_solver+
to run properly on 32-bit architectures.

5. The default rpm spec now runs the test suite.

6. Add http://en.wikipedia.org/wiki/Const-correctness[const] annotations and
moved declarations to where they are first assigned.

Version 3.16.0: (30-Nov-2012)
-----------------------------

1. Add the +-l micro-finance-improved+ preset (or +-l mfi+ for short),