@@ -4,6 +4,13 @@ Shlomi Fish <shlomif@cpan.org>
 :Date: 2009-09-05
 :Revision: $Id$
 
+Next Version: (Unknown)
+-----------------------
+
+1. Made sure unknown options which have a prefix that is a recognised option
+(e.g: +--resetjunk+ vs. +--reset+), will be reported as such instead of
+processed as the prefix automagically.
+
 Version 3.20.1: (01-Jul-2013)
 -----------------------------
 
